2012-06-04 Sasa Ostrouska <casaxa@gmail.com>

	* Added skeletions dir, and an empty php skeletion file.
	* Added GNU GPL licence header in class_database.php

2012-05-31 Sasa Ostrouska <casaxa@gmail.com>

	* Created a ChangeLog file.