@@ -1,3 +1,11 @@
+2012-06-05 Sasa Ostrouska <casaxa@gmail.com>
+
+	* Added test_psql_transaction_test1.php 
+	* Added test_psql_transaction_test2.php 
+	* Renamed index_mysql_transaction_test{1,2}.php into
+	test_mysql_transaction_test{1,2}.php
+	* Fixd test_mysql_transaction_test1.php
+
 2012-06-04 Sasa Ostrouska <casaxa@gmail.com>
 
 	* Added skeletions dir, and an empty php skeletion file.
